@@ -26,7 +26,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'internal' => '',
 	'uploadfolder' => 1,
 	'createDirs' => '',
-	'modify_tables' => 'cache_pages,fe_groups,fe_users,pages,sys_template,tt_content,user_oelibtest_test,user_oelibtest_test_article_mm',
+	'modify_tables' => 'be_users,cache_pages,fe_groups,fe_users,pages,sys_template,tt_content,user_oelibtest_test,user_oelibtest_test_article_mm',
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'CGLcompliance' => '',
